--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@reduxjs/toolkit": "^2.4.0",
+    "cloudinary": "^2.5.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
@@ -22,7 +24,8 @@
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
